package com.sil.facturas.domain.ocr;

public record Rect(double x, double y, double w, double h) {}
