package com.sil.facturas.domain.ocr.enums;

public enum _AnchorX {
  LEFT,
  CENTER,
  RIGHT
}
