package com.sil.facturas.domain.ocr.enums;

public enum _AnchorY {
  TOP,
  CENTER,
  BOTTOM
}
