package com.sil.facturas.domain.ocr.enums;

public enum _OffsetTipo {
  NONE,
  ABSOLUTO,
  RELATIVO_ORIGEN,
  DEBAJO_FINAL,
  ENCIMA_INICIO,
  DERECHA_FINAL,
  IZQUIERDA_INICIO
}
