package com.sil.facturas.domain.ocr.enums;

public enum _TipoContenido {
  TEXTO_COMPLETO,
  VALOR_NUMERICO,
  ENCABEZADO,
  FECHA,
  LISTA
}
