package domain.records;

public record ROI(double x1, double y1, double x2, double y2) {}
