package infrastructure.servicios.ocr.aux;

public class Campo {
  public String nombre;
  public String parent;
  public Rect zona;
  public double offsetX;
  public double offsetY;
}
